--- a/style.css
+++ b/style.css
@@ -1,99 +1,226 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Oswald:wght@200..700&family=Playwrite+BE+VLG:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200..700&family=Playwrite+BE+VLG:wght@100..400&display=swap');
+
+
 
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: "Kalnia Glaze", serif;
+    font-family: "Kanit", sans-serif;
 }
 
 header {
-   
-    background-color: rgb(241, 168, 209);
     display: flex;
-    justify-content: center;
     align-items: center;
     align-content: center;
     height: 4rem;
 }
 
 .sign {
-    height: 4rem;
-    width: 30%;
-    padding: 10px;
-    margin-left: 15px;
-    margin-right: 15px;
+    width: 300px;
+    padding: 2px 10px 10px;
+    margin: 0px 50px;
+    height: 3rem;
+    color: rgb(28 117 180);
 }
 
 .options {
-    height: 4rem;
-    width: 70%;
     padding: 10px;
-    border: 2px solid black;
-    margin: 5px 5px;
+    margin-left: 15rem;
+    width: 50vw;
 }
 
 ul {
     display: flex;
     justify-content: space-evenly;
 }
+
 ul > a {
     text-decoration: none;
-    color: rgb(154, 23, 84);
+    background-color: white;
+    border-radius: 17px;
+    padding: 5px 15px ;
+}
+
+/* Hero Section*/
+
+#box {
+    height:89vh ;
+    padding: 3rem;
+}
+
+.home {
+    text-align: center;
+    padding: 2.2rem ;
+    background: rgb(111, 176, 245,0.1);
+    
+}
+
+#big {
+    font-size: 1.5rem;
+    color: rgb(251, 250, 250);
+}
+
+#background {
+    background-image: url("heroimage.jpeg");
+    background-size: cover;
+     z-index: -1; 
 }
 
 /* about me section */
 
-section {
+#hero{
       display: flex;
-      
-
+      padding: 27px;
+      height: 100vh;
+      background-color: rgb(199, 222, 249);
 }
 
-h1{
+h1,h2{
     color: rgb(194, 28, 128);
     font-weight: 1000;
     font-style: italic;
-    margin-left: 20px;
-    font-size: 3rem;
+    text-align: center;
+    font-size: 2.9rem;
+    letter-spacing: 4pt;
 }
 
 .about-me {
-     padding: 40px 20px 2px;
+    padding: 10px 20px;
 }
 
-
-
-img {
-    height: 78vh;
+.photo {
+    height: 85vh;
     width: 35vw;
     border-radius: 50%;
     padding: 10px 0px;
 }
 
+.para {
+    text-align: justify;
+    text-justify: inter-word;
+}
+
 p {
-    margin: 10px;
-    color: #565454;
+    margin: 0.5rem;
+    color: #393333;
     font-weight: 18px;
-    font-size: 1.125rem;
+    font-size: 1.1rem;
     line-height: 1.75rem;
 }
 
 /* button features */
 
-#btn {
-    padding: 10px 15px ;
-    background-color: #e12372;
+.btn {
+    padding: 8px 17px ;
+    background-color: rgb(111, 176, 245);
     color: white;
     margin: 0px 60px;
-    border: 1px solid;
-    border-radius: 18px;
+    border: 1px solid; 
     font-weight: 600;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     text-decoration: none;
+    margin: 20px 30px;
 }
 
-#btn:hover {
-    background-color:rgb(167, 4, 182);
-    
+.btn:hover {
+    background-color:rgb(241, 245, 243);
+    font-size: 1.6rem;
+    color: black;
+}
+
+/* contact me*/
+
+.contact-me {
+    padding: 25px 25px 15px;
+    margin: 2rem;
+    background-color: rgb(204, 218, 249);
+}
+
+.info {
+    text-align: center;
+    margin: 3.2rem;
+}
+
+.line {
+    display: inline-block;
+}
+
+.shading {
+    color: #595454;
+    font-weight: bold;
+}
+
+i{
+    font-size: 2.2rem;
+}
+
+/* footer section */
+footer {
+     height: 5rem;
+     background-color: #1a1616;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     margin-top : 40px ;
+     color: white;
+}
+
+.copyright {
+    color: white;
+    font-size: 1rem;
+}
+
+/* certificate section*/
+.center {
+    text-align: center;
+}
+
+.box {
+    margin: 15px; 
+    background-color: rgb(190, 221, 244);
+    width: 30rem;
+}
+
+.certificate {
+    width: 30rem;
+}
+
+.para{
+    padding: 1rem;
+}
+
+/* skills*/
+.img {
+    padding: 4px;
+    margin: 11px;
+    display: inline-block;
+    text-align: center;
+}
+
+/* img of project*/
+.adjust {
+    height: 10rem;
+    width: 15rem;
+}
+
+table {
+    border: 1px solid grey;
+    border-collapse: collapse;
+}
+
+td,th {
+    text-align: center;
+    padding: 3px;
+    border: 0.5px solid grey;
+}
+
+tr:nth-child(even) {
+    background-color: rgb(196, 237, 249);
+}
+
+#heading {
+    color: rgb(144, 198, 227);
 }
